<resources>
    <string name="app_name">SQuizze</string>
    <string name="login">Faça seu Login</string>
    <string name="activity_dashboard_label">Escolha o Quiz</string>
    <string name="quiz_name">Quiz Um</string>
    <string name="question_count">50</string>
    <string name="best_result">Melhor Resultado:</string>
    <string name="last_result">Último Resultado:</string>
    <string name="question_count_label">Questões</string>
    <string name="category_label">Escolha uma Categoria</string>
    <string name="action_settings">Settings</string>
    <string name="country_name">name</string>
    <string name="logo_desc">description</string>
</resources>
